# openstack-watcher-middleware

./: .gitignore  .stestr.conf  .testr.conf  .travis.yml  AUTHORS  ChangeLog  Makefile  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflow/: test.yaml
doc/: cadf.md  configuration.md
etc/: designate.yaml  glance.yaml  ironic.yaml  keystone.yaml  nova.yaml
watcher/: __init__.py  cadf_strategy.py  common.py  errors.py  target_type_uri_strategy.py  watcher.py
watcher/tests/: fake.py  test_action_cinder.py  test_action_glance.py  test_action_nova.py  test_barbican.py  test_cinder.py  test_common.py  test_config.py  test_designate.py  test_glance.py  test_ironic.py  test_keystone.py  test_manila.py  test_neutron.py  test_nova.py  test_swift.py  test_target_type_uri_strategy.py  test_watcher_middleware.py
watcher/tests/fixtures/: cinder.yaml  ironic.yaml  keystone.yaml  manila.yaml  neutron.yaml  nova-complex.yaml  nova.yaml  swift.yaml
